--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, sans-serif;
     line-height: 1.6;
-    background: linear-gradient(135deg, #ffffff, #ffffff);
+    background: linear-gradient(135deg, #2408c3, #a30404);
     color: #333;
 }
 
